--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -2,6 +2,7 @@
 	<div class="container">
     <header class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
+      	<!-- <a class="navbar-brand" href="{{pathFor 'postsList'}}">{{pageTitle}}</a> -->
         <a class="navbar-brand" href="/">Microscope</a>
       </div>
     </header>
